Version 0.0.10 (2016-05-??)

   Rename -d/--details options to -v/--verbose

Version 0.0.9 (2016-05-30)

   Search authors/extensions/genres/languages by database id

Version 0.0.8 (2016-05-29)

    Search by author's, book's, extension's, language's id

    Output count of found objects

    Use option -d to output database id

Version 0.0.7 (2016-05-25)

   Extend ml-serach.py to search books by authors, extensions, genres,
   languages.

Version 0.0.6 (2016-05-21)

   Extend ml-serach.py to search books by title, series, archive, file.

Version 0.0.5 (2016-05-14)

   Extend script ml-serach.py to search extensions/genres/languages.

Version 0.0.4 (2016-05-11)

   Command-line script to search authors by surname/name/full name.

Version 0.0.3 (2015-12-24)

   Convert *.inp(x) to SQL.

Version 0.0.2 (2015-12-21)

   Import genres from glst files.

Version 0.0.1 (2015-12-15)

   The project started. Created DB schema.